Automatically loads committee and shows from json file

--- a/index.html
+++ b/index.html
@@ -117,44 +117,7 @@
         <div id="shows" class="section plain_section">
             <div class="section_content">
                 <h1>Recent Shows</h1>
-                <div id="shows_grid">
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/romeo_and_juliet.png">
-                        <h4 class="show_title">Romeo + Juliet - Spring Main 2024</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/waiting_for_godot.jpeg">
-                        <h4 class="show_title">Waiting For Godot - Autumn Studio 2023</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/bald_prima_donna.jpg">
-                        <h4 class="show_title">The Bald Prima Donna - October Show 2023</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/the_pillowman.jpeg">
-                        <h4 class="show_title">The Pillowman - Spring Studio 2023</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/earthquakes_in_london.jpg">
-                        <h4 class="show_title">Earthquakes In London - Spring Main 2023</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/the_hothouse.jpeg">
-                        <h4 class="show_title">The Hothouse - Spring Main 2022</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/family_room.jpeg">
-                        <h4 class="show_title">Family Room - Autumn Main 2021</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/an_angel_in_islington.jpg">
-                        <h4 class="show_title">An Angel In Islington - October Show 2021</h4>
-                    </div>
-                    <div class="show">
-                        <img aria-hidden="true" class="show_img" src="images/shows/all_in_good_time.jpeg">
-                        <h4 class="show_title">All In Good Time - Spring Main 2019</h4>
-                    </div>
-                </div>
+                <div id="shows_grid"></div>
                 <div class="section_content narrow_content">
                     <h1>Propose a Show</h1>
                     <p>DramSoc decides on each term's shows at a Play Proposals meeting (announced on the DramSoc mailing list) held near to the end of the previous term. A full play proposal includes:</p>
@@ -218,128 +181,7 @@
         <div id="committee" class="section plain_section">
             <div class="section_content regular_content">
                 <h1>Committee</h1>
-                <div id="committee_grid" class="content_grid">
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/jonah.jpg">
-                        <div>
-                            <h2>Jonah McLeod</h2>
-                            <p class="committee_role">President</p>
-                            <a href="mailto:president@dramsoc.org">president@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/ben.jpg">
-                        <div>
-                            <h2>Ben Meacher</h2>
-                            <p class="committee_role">Vice President</p>
-                            <a href="mailto:vice@dramsoc.org">vice@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/oliver.jpg">
-                        <div>
-                            <h2>Oliver Gale</h2>
-                            <p class="committee_role">Treasurer</p>
-                            <a href="mailto:treasurer@dramsoc.org">treasurer@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/sophie.jpg">
-                        <div>
-                            <h2>Sophie Reck Pointon</h2>
-                            <p class="committee_role">Honorary Secretary<br>& Social Secretary</p>
-                            <a href="mailto:honsec@dramsoc.org">honsec@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/jack_beaumont.jpg">
-                        <div>
-                            <h2>Jack Beaumont</h2>
-                            <p class="committee_role">Technical Director</p>
-                            <a href="mailto:techdir@dramsoc.org">techdir@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/dan.jpg">
-                        <div>
-                            <h2>Dan Cornell</h2>
-                            <p class="committee_role">Acting Director</p>
-                            <a href="mailto:acting@dramsoc.org">acting@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/jarek.jpg">
-                        <div>
-                            <h2>Jarek Ciba</h2>
-                            <p class="committee_role">Lighting Director</p>
-                            <a href="mailto:lighting@dramsoc.org">lighting@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/josh.jpg">
-                        <div>
-                            <h2>Josh Henry</h2>
-                            <p class="committee_role">Sound Director</p>
-                            <a href="mailto:sound@dramsoc.org">sound@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/liberty.png">
-                        <div>
-                            <h2>Liberty Wright</h2>
-                            <p class="committee_role">Sets, Props & Costumes<br>Director</p>
-                            <a href="mailto:spc@dramsoc.org">spc@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/pip.jpg">
-                        <div>
-                            <h2>Pip Moss</h2>
-                            <p class="committee_role">Systems Administrator</p>
-                            <a href="mailto:sysadmin@dramsoc.org">sysadmin@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/jack_finnis.jpg">
-                        <div>
-                            <h2>Jack Finnis</h2>
-                            <p class="committee_role">Systems Administrator</p>
-                            <a href="mailto:sysadmin@dramsoc.org">sysadmin@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/valerie.jpg">
-                        <div>
-                            <h2>Valerie Locher</h2>
-                            <p class="committee_role">Publicity Officer</p>
-                            <a href="mailto:publicity@dramsoc.org">publicity@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/anoushka.jpg">
-                        <div>
-                            <h2>Anoushka Nairac</h2>
-                            <p class="committee_role">Social Secretary</p>
-                            <a href="mailto:social@dramsoc.org">social@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/elana.jpg">
-                        <div>
-                            <h2>Elana Todd-Miller</h2>
-                            <p class="committee_role">Ordinary Committee Member</p>
-                            <a href="mailto:ocm@dramsoc.org">ocm@dramsoc.org</a>
-                        </div>
-                    </div>
-                    <div class="content_item">
-                        <img aria-hidden="true" class="headshot" src="images/committee/mystifer_cat.jpg">
-                        <div>
-                            <h2>Mystifer Cat</h2>
-                            <p class="committee_role">Official Mascot</p>
-                            <a href="mailto:mystifercat@dramsoc.org">mystifercat@dramsoc.org</a>
-                        </div>
-                    </div>
-                </div>
+                <div id="committee_grid" class="content_grid"></div>
             </div>
         </div>
 
