Moved script and style to static folder

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <meta property="og:image" content="images/general/summer_ball1.jpg">
         
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700,400">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="static/style.css">
         
         <script src="https://www.youtube.com/player_api"></script>
-        <script defer src="script.js"></script>
+        <script defer src="static/script.js"></script>
 
         <!-- GOOGLE ANALYTICS -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-8EMSMM17Z4"></script>
