--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img aria-hidden="true" id="nav_menu_img" src="/static/images/symbols/line.3.horizontal.png">
                 </button>
             </div>
-            <span class="content_row" id="nav_links">
+            <span id="nav_links" class="content_row">
                 <button type="button" class="nav_button" onclick="scroll_to('acting')">
                     <h3>Acting</h3>
                 </button>
@@ -70,7 +70,7 @@
 
         <!-- ABOUT -->
         <div id="about" class="section plain_section">
-            <div class="section_content narrow_content">
+            <div class="section_column narrow_content">
                 <h1>Welcome to DramSoc, Imperial's Dramatic Society!</h1>
                 <p>We do everything related to theatre: acting, set, costume, lighting, sound, writing, stage management, directing, production, and more. There's plenty to get involved in!</p>
                 <p>DramSoc own and operate the full range of state-of-the-art entertainment equipment, and our technical team run events across college, from <a href="https://mtsoc.co.uk" target="_blank" rel="noopener">MTSoc</a> shows to Summer Ball. We take pride in training our members as theatre technicians, actors and directors. We run weekly workshops, including backstage tours, improvisation, set-building, lighting design, and much more, and many of our alumni graduate to become theatre professionals.</p>
@@ -103,7 +103,7 @@
 
         <!-- ACTING -->
         <div id="acting" class="section background_section">
-            <div class="section_content narrow_content">
+            <div class="section_column narrow_content">
                 <h1>Acting</h1>
                 <p>DramSoc puts on at least one full-length play in our theatre, the <button type="button" onclick="scroll_to('uch')">Union Concert Hall</button> per term, as well as a number of other plays in different venues around the College and further afield. Usually our main shows have casts of between 15 and 20 people and we welcome auditions from anyone with any amount of experience, so if you’re thinking of getting involved, keep an eye out for audition posters and notices on our website, social media, and our mailing lists at the start and end of every term.</p>
                 <button type="button" class="large_button" onclick="scroll_to('mailing_lists')">
@@ -115,10 +115,10 @@
 
         <!-- SHOWS -->
         <div id="shows" class="section plain_section">
-            <div class="section_content">
+            <div class="section_column">
                 <h1>Recent Shows</h1>
                 <div id="shows_grid"></div>
-                <div class="section_content narrow_content">
+                <div class="section_column narrow_content">
                     <h1>Propose a Show</h1>
                     <p>DramSoc decides on each term's shows at a Play Proposals meeting (announced on the DramSoc mailing list) held near to the end of the previous term. A full play proposal includes:</p>
                     <ul>
@@ -140,7 +140,7 @@
 
         <!-- TECH -->
         <div id="tech" class="section background_section">
-            <div class="section_content narrow_content">
+            <div class="section_column narrow_content">
                 <h1>Tech</h1>
                 <p>There are plenty of roles within DramSoc even for those who prefer to stay off the stage! All technical aspects of our shows, and of shows staged by the <a href="https://mtsoc.co.uk" target="_blank" rel="noopener">Musical Theatre Society</a>, are provided by DramSoc Crew. We design and build the set, then dress it and light it. We design sound effects and rig sound equipment. And we make sure the cast look their best with the right costumes, props and make-up.</p>
                 <p>On top of this, we provide sound, lighting and rigging for live events hosted by the Union and other Clubs & Societies, such as the annual Summer Ball, talent shows, live music events and club nights. We would love you to be around to help out! For more information or to get involved, email our Technical Director, and join the Crew Talk mailing list.</p>
@@ -153,7 +153,7 @@
 
         <!-- TECHNICAL SERVICES -->
         <div id="tech_services" class="section plain_section">
-            <div class="section_content narrow_content">
+            <div class="section_column narrow_content">
                 <h1>Technical Services</h1>
                 <p>DramSoc provides a wide range of technical services; from plays to musicals, talent shows to outdoor music festival stages, variety shows to the annual Summer Ball, we do it all. We have a large and dedicated crew, and hire out professional lighting and sound equipment, props and set from our extensive stores. In addition, we offer comprehensive production management, consultancy and design services.</p>
                 <p>Our experience in production management and design ranges from the large-scale annual Summer Ball, including the lighting and sound in the Great Hall and the Queen's Tower Rooms and all the set and design features, down to small societal events in Metric. As such we believe that you will find our help and advice invaluable whilst planning your event, regardless of its size or complexity.</p>
@@ -167,7 +167,7 @@
 
         <!-- UCH -->
         <div id="uch" class="section background_section">
-            <div class="section_content narrow_content">
+            <div class="section_column narrow_content">
                 <h1>Union Concert Hall</h1>
                 <p>DramSoc's primary venue is the Imperial College Union Union Concert Hall (or UCH). This was built in the 1950s, opening, along with the rest of the upper part of the Union building, in 1956. DramSoc is responsible for the maintenance of the technical aspects of the hall, and it contains a full-featured stage and technical installation, albeit limited by the shape of the building.</p>
                 <a href="https://maps.app.goo.gl/wFEc4Y3T66jhwqZj7" class="large_button" target="_blank" rel="noopener">
@@ -179,7 +179,7 @@
 
         <!-- COMMITTEE -->
         <div id="committee" class="section plain_section">
-            <div class="section_content regular_content">
+            <div class="section_column regular_content">
                 <h1>Committee</h1>
                 <div id="committee_grid" class="content_grid"></div>
             </div>
@@ -187,7 +187,7 @@
 
         <!-- MAILING LISTS -->
         <div id="mailing_lists" class="section background_section">
-            <div class="section_content regular_content">
+            <div class="section_column regular_content">
                 <h1>Mailing Lists</h1>
                 <p class="narrow_content">Joining our mailing lists is the best way to keep up to date with society news, and find out about society events. Read the descriptions below to help you decide which lists to join.</p>
                 <div class="content_grid">
@@ -221,7 +221,7 @@
 
         <!-- CONTACT -->
         <div id="contact" class="section plain_section">
-            <div class="section_content">
+            <div class="section_column">
                 <h1>Contact Us</h1>
                 <div class="content_column">
                     <div class="content_row contact_option">
@@ -272,7 +272,7 @@
 
         <!-- FOOTER -->
         <div id="footer" class="section">
-            <div class="section_content">
+            <div class="section_column">
                 <div class="content_grid" id="footer_grid">
                     <div class="content_column">
                         <button aria-hidden="true" type="button" onclick="scroll_to('intro')">
@@ -320,13 +320,13 @@
                         <a href="https://wiki.dramsoc.org" target="_blank" rel="noopener">Wiki</a>
                     </div>
                     <div class="content_column">
-                        <a class="footer_logo" title="Imperial College London" href="https://www.imperial.ac.uk" target="_blank" rel="noopener">
+                        <a title="Imperial College London" href="https://www.imperial.ac.uk" target="_blank" rel="noopener">
                             <img aria-hidden="true" class="invert" id="imperial_logo" src="static/images/logos/imperial.png">
                         </a>
-                        <a class="footer_logo" title="Imperial College Union" href="https://www.imperialcollegeunion.org" target="_blank" rel="noopener">
+                        <a title="Imperial College Union" href="https://www.imperialcollegeunion.org" target="_blank" rel="noopener">
                             <img aria-hidden="true" class="invert" id="union_logo" src="static/images/logos/union.png">
                         </a>
-                        <a class="footer_logo" title="The Comus Club" href="https://www.comus.org.uk" target="_blank" rel="noopener">
+                        <a title="The Comus Club" href="https://www.comus.org.uk" target="_blank" rel="noopener">
                             <img aria-hidden="true" class="invert" id="comus_logo" src="static/images/logos/comus.png">
                         </a>
                     </div>
