Added padding behing navbar

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 </a>
             </span>
         </div>
+        <div id="navbar_padding"></div>
 
         <!-- PLAYER -->
         <div id="intro" class="background_section">
