Added ability to present a feature at the top of the page

--- a/index.html
+++ b/index.html
@@ -57,15 +57,20 @@
 
         <!-- PLAYER -->
         <div id="intro" class="background_section">
+            <div id="player"></div>
             <div id="dramsoc">
                 <img aria-hidden="true" id="dramsoc_logo" class="invert" src="static/images/logos/dramsoc.png">
                 <h1 id="dramsoc_title">Imperial College Dramatic Society</h1>
             </div>
-            <div id="player"></div>
             <button type="button" aria-hidden="true" id="down_button" onclick="scroll_to('about')">
                 <img aria-hidden="true" id="down_button_img" class="invert" src="static/images/symbols/chevron.down.png">
             </button>
         </div>
+
+        <!-- FEATURE -->
+        <!-- Uncomment the line below to show a feature image -->
+        <!-- This can be used to advertise upcoming shows & events -->
+        <!-- <div id="feature"></div> -->
 
         <!-- ABOUT -->
         <div id="about" class="section plain_section">
