--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700,400">
         <link rel="stylesheet" href="static/style.css">
+
+        <script>
+            hash = document.location.hash
+            document.location.hash = ''
+        </script>
         <script src="static/script.js"></script>
 
         <!-- GOOGLE ANALYTICS -->
