--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="static/style.css">
 
         <script>
+            // Stop the page from scrolling to the anchor on load
             hash = document.location.hash
             document.location.hash = ''
         </script>
