renamed #mailing_lists to #talk

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <button type="button" class="nav_button" onclick="scroll_to('committee')">
                     <h3>Committee</h3>
                 </button>
-                <button type="button" class="nav_button" onclick="scroll_to('mailing_lists')">
+                <button type="button" class="nav_button" onclick="scroll_to('talk')">
                     <h3>Mailing Lists</h3>
                 </button>
                 <button type="button" class="nav_button" onclick="scroll_to('contact')">
@@ -103,7 +103,7 @@
                         <img aria-hidden="true" class="icon" src="static/images/symbols/calendar.png">
                         Upcoming Events
                     </a>
-                    <button type="button" class="large_button" onclick="scroll_to('mailing_lists')">
+                    <button type="button" class="large_button" onclick="scroll_to('talk')">
                         <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
                         Join Our Mailing List
                     </a>
@@ -116,7 +116,7 @@
             <div class="section_column narrow_content">
                 <h1>Acting</h1>
                 <p>DramSoc puts on at least one full-length play in our theatre, the <button type="button" onclick="scroll_to('uch')">Union Concert Hall</button> per term, as well as a number of other plays in different venues around the College and further afield. Usually our main shows have casts of between 15 and 20 people and we welcome auditions from anyone with any amount of experience, so if you’re thinking of getting involved, keep an eye out for audition posters and notices on our website, social media, and our mailing lists at the start and end of every term.</p>
-                <button type="button" class="large_button" onclick="scroll_to('mailing_lists')">
+                <button type="button" class="large_button" onclick="scroll_to('talk')">
                     <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
                     Join Our Mailing List
                 </a>
@@ -154,7 +154,7 @@
                 <h1>Tech</h1>
                 <p>There are plenty of roles within DramSoc even for those who prefer to stay off the stage! All technical aspects of our shows, and of shows staged by the <a href="https://mtsoc.co.uk" target="_blank" rel="noopener">Musical Theatre Society</a>, are provided by DramSoc Crew. We design and build the set, then dress it and light it. We design sound effects and rig sound equipment. And we make sure the cast look their best with the right costumes, props and make-up.</p>
                 <p>On top of this, we provide sound, lighting and rigging for live events hosted by the Union and other Clubs & Societies, such as the annual Summer Ball, talent shows, live music events and club nights. We would love you to be around to help out! For more information or to get involved, email our Technical Director, and join the Crew Talk mailing list.</p>
-                <button type="button" class="large_button" onclick="scroll_to('mailing_lists')">
+                <button type="button" class="large_button" onclick="scroll_to('talk')">
                     <img aria-hidden="true" class="icon" src="static/images/symbols/envelope.png">
                     Join Our Mailing List
                 </a>
@@ -196,7 +196,7 @@
         </div>
 
         <!-- MAILING LISTS -->
-        <div id="mailing_lists" class="section background_section">
+        <div id="talk" class="section background_section">
             <div class="section_column regular_content">
                 <h1>Mailing Lists</h1>
                 <p class="narrow_content">Joining our mailing lists is the best way to keep up to date with society news, and find out about society events. Read the descriptions below to help you decide which lists to join.</p>
