--- a/talk.html
+++ b/talk.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://dramsoc.github.io/#mailing_lists">
+<meta http-equiv="refresh" content="0; url=https://dramsoc.github.io/#talk">
