Renamed officer duties to bye laws

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     <div class="content_column">
                         <a href="/static/files/hire_terms_and_conditions.pdf" target="_blank">Hire Terms and Conditions</a>
                         <a href="/static/files/constitution.pdf" target="_blank">Constitution</a>
-                        <a href="/static/files/officer_duties.pdf" target="_blank">Officer Duties</a>
+                        <a href="/static/files/bye_laws.pdf" target="_blank">Bye Laws</a>
                         <a href="/static/files/data_protection_policy.pdf" target="_blank">Data Protection</a>
                         <a href="/static/files/debtor_policy.pdf" target="_blank">Debtor Policy</a>
                         <a href="/static/files/privacy_notice.pdf" target="_blank">Privacy Notice</a>
