Added PECS feature and feature tickets button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
         <!-- FEATURE -->
         <!-- Uncomment the line below to show a feature image -->
         <!-- This can be used to advertise upcoming shows & events -->
-        <!-- <div id="feature"></div> -->
+        <div id="feature" class="section">
+            <a id="feature_button" class="large_button" href="/tickets" target="_blank">
+                <img aria-hidden="true" class="icon" src="static/images/symbols/ticket.png">
+                Tickets
+            </a>
+        </div>
 
         <!-- ABOUT -->
         <div id="about" class="section plain_section">
