added redundant query to force style and script to refresh

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         <meta property="og:image" content="static/images/general/summer_ball1.jpg">
         
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700,400">
-        <link rel="stylesheet" href="static/style.css">
+        <link rel="stylesheet" href="static/style.css?v=1">
 
         <script>
             // Stop the page from scrolling to the anchor on load
             hash = document.location.hash
             document.location.hash = ''
         </script>
-        <script src="static/script.js"></script>
+        <script src="static/script.js?v=1"></script>
 
         <!-- GOOGLE ANALYTICS -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-8EMSMM17Z4"></script>
@@ -74,8 +74,9 @@
         </div>
 
         <!-- FEATURE -->
-        <!-- Uncomment the line below to show a feature image -->
-        <!-- This can be used to advertise upcoming shows & events -->
+        <!-- This section can be used to advertise upcoming shows -->
+        <!-- It displays the show's poster and a link to buy tickets -->
+        <!-- To change the image, search for #feature in style.css and change the background-image url -->
         <div id="feature" class="section">
             <a id="feature_button" class="large_button" href="/tickets" target="_blank">
                 <img aria-hidden="true" class="icon" src="static/images/symbols/ticket.png">
