updated index.html comments

--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 		<link rel="apple-touch-icon" href="static/images/logos/dramsoc.jpg">
         <meta name="viewport" content="width=device-width, viewport-fit=cover">
         <meta property="og:image" content="static/images/general/summer_ball1.jpg">
-        
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700,400">
-        <link rel="stylesheet" href="static/style.css?v=1">
 
+        <!-- The purpose of the query '?v=' on style.css and script.js is to force browsers to not use a cached version of the files and to fetch the newest version -->
+        <!-- Increment v every time you want to flush the cache of everyone's browsers (eg. if you make a change to the website which works fine locally but causes strange errors when viewed on dramsoc.org) -->
+        <link rel="stylesheet" href="static/style.css?v=1">
+        <script src="static/script.js?v=1"></script>
+
+        <!-- Stop the page from scrolling to the anchor on load -->
         <script>
-            // Stop the page from scrolling to the anchor on load
             hash = document.location.hash
             document.location.hash = ''
         </script>
-        <script src="static/script.js?v=1"></script>
 
         <!-- GOOGLE ANALYTICS -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-8EMSMM17Z4"></script>
