--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="nav">
             <div id="navbar" class="regular_content">
                 <button aria-hidden="true" type="button" class="nav_button" onclick="scroll_to('intro')">
-                    <img class="invert small_logo" aria-hidden="true" src="static/images/logos/dramsoc.png">
+                    <img class="small_logo" aria-hidden="true" src="static/images/logos/dramsoc_white_200.png">
                 </button>
                 <button aria-hidden="true" type="button" id="nav_menu" class="nav_button invert" onclick="toggle_nav_links()">
                     <img aria-hidden="true" id="nav_menu_img" src="/static/images/symbols/line.3.horizontal.png">
@@ -67,7 +67,7 @@
         <div id="intro" class="background_section">
             <div id="player"></div>
             <div id="dramsoc">
-                <img aria-hidden="true" id="dramsoc_logo" class="invert" src="static/images/logos/dramsoc.png">
+                <img aria-hidden="true" id="dramsoc_logo" src="static/images/logos/dramsoc_white.png">
                 <h1 id="dramsoc_title">Imperial College Dramatic Society</h1>
             </div>
             <button type="button" aria-hidden="true" id="down_button" onclick="scroll_to('about')">
@@ -294,7 +294,7 @@
                 <div class="content_grid" id="footer_grid">
                     <div class="content_column">
                         <button aria-hidden="true" type="button" onclick="scroll_to('intro')">
-                            <img class="invert small_logo" aria-hidden="true" src="static/images/logos/dramsoc.png">
+                            <img class="small_logo" aria-hidden="true" src="static/images/logos/dramsoc_white_200.png">
                         </button>
                         <p>Est. 1907</p>
                         <div class="content_row">
