--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <!-- This section can be used to advertise upcoming shows -->
         <!-- It displays the show's poster and a link to buy tickets -->
         <!-- To change the image, search for #feature in style.css and change the background-image url -->
-        <!-- <div id="feature" class="section">
+        <div id="feature" class="section">
             <a id="feature_button" class="large_button" href="/tickets" target="_blank">
                 <img aria-hidden="true" class="icon" src="static/images/symbols/ticket.png">
                 Tickets
             </a>
-        </div> -->
+        </div>
 
         <!-- ABOUT -->
         <div id="about" class="section plain_section">
