--- a/fringe.html
+++ b/fringe.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://tickets.edfringe.com/whats-on/tycho-mankind-s-first-hotel-on-the-moon">
+<meta http-equiv="refresh" content="0; url=https://www.thespaceuk.com/shows/2024/tycho-mankind-s-first-hotel-on-the-moon">
